--- a/src/template/index.html
+++ b/src/template/index.html
@@ -1,35 +1,36 @@
 <html>
     <head>
-    <title>template function test</title>
+    <title> Instdown is a downloader of instagram resource, such as instagram photo or instagram video.</title>
     <script type="text/javascript" src="{{ static_url('js/jquery.js') }}"></script>
-    <script type="text/javascript">
-        function load_resource(){
-            instgram_url = encodeURIComponent($("#instgram_url").val());
-            $.ajax({  
-                type: "GET",  
-                url: "{{instdown_api}}",  
-                data: "url="+instgram_url,
-  
-                success: function(data) {  
-                    if(data != "") {
-                        data = $.parseJSON(data);
-                        if (data.data.video != null){
-                            $("#video").html(data.data.video);
-                        }
-                        if (data.data.image != null){
-                            $("#image").html(data.data.image);
-                        }
-                    }else {  
-                        alert("fail comment!");  
-                    }  
-                }  
-            });  
-        };
-    </script>
+    <script type="text/javascript" src="{{ static_url('js/html.js') }}"></script>
+    <link href="{{ static_url('css/bootstrap.min.css') }}" rel="stylesheet">
     </head>
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Instdown</a>
+        </div>
+<!--
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">Page 1</a></li>
+          <li><a href="#">Page 2</a></li>
+        </ul>
+-->
+        <form class="navbar-form navbar-middle">
+          <div class="form-group" width=50%>
+            <input id='instgram_url' type="text"
+                placeholder="Paste instagram page of photo/video url here!"
+                class="form-control" style="width:500px;">
+          </div>
+          <div class="form-group" width=50%>
+            <button type="button" onclick="load_resource('{{instdown_api}}')"
+                class="btn btn-success"style="width:100px;">Go</button>
+          </div>
+        </form>
+      </div>
+    </nav>
     <form>
-        <input id='instgram_url'/>
-        <button type="button" onclick="load_resource()" >get</button>
         <div id='result'>
             <div id='video'></div>
             <div id='image'></div>
