add page bottom

--- a/src/template/index.html
+++ b/src/template/index.html
@@ -5,6 +5,7 @@
     <script type="text/javascript" src="{{ static_url('js/html.js') }}"></script>
     <link href="{{ static_url('css/bootstrap.min.css') }}" rel="stylesheet">
     </head>
+    <body>
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -36,6 +37,9 @@
             <div id='image'></div>
         </div>
     </form>
-    <body>
+    <p style="text-align:center;padding-bottom:1em;"><small><small><a
+                href="/">Home</a>
+            <small>Copyright © 2017-2020 Instdown. All rights
+                reserved.</small></small></small></p>
     </body>
 </html>
