meta keywords description

--- a/src/template/index.html
+++ b/src/template/index.html
@@ -1,6 +1,10 @@
 <html>
     <head>
     <title> Instdown is a downloader of instagram resource, such as instagram photo or instagram video.</title>
+    <meta name="keywords" content="instagram, photo, video, Downloader, download"/>
+    <meta name="description" content="Instagram Photo Downloader. Instagram Video
+    Downloader. Easy way to download instagram pictures and videos to your
+    device."/>
     <script type="text/javascript" src="{{ static_url('js/jquery.js') }}"></script>
     <script type="text/javascript" src="{{ static_url('js/html.js') }}"></script>
     <link href="{{ static_url('css/bootstrap.min.css') }}" rel="stylesheet">
