--- a/src/template/index.html
+++ b/src/template/index.html
@@ -8,42 +8,67 @@
     <script type="text/javascript" src="{{ static_url('js/jquery.js') }}"></script>
     <script type="text/javascript" src="{{ static_url('js/html.js') }}"></script>
     <link href="{{ static_url('css/bootstrap.min.css') }}" rel="stylesheet">
+    <style>  
+        .col-center-block {  
+            float: none;  
+            display: block;  
+            margin-left: auto;  
+            margin-right: auto;  
+        }  
+    </style> 
     </head>
     <body>
-    <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">Instdown</a>
+        <nav class="navbar navbar-inverse">
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <a class="navbar-brand" href="#">Instdown</a>
+            </div>
+    <!--
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#">Page 1</a></li>
+              <li><a href="#">Page 2</a></li>
+            </ul>
+            <form class="navbar-form navbar-middle">
+              <div class="form-group" width=50%>
+                <input id='instagram_url' type="text"
+                    placeholder="Paste instagram page of photo/video url here!"
+                    class="form-control" style="width:500px;">
+              </div>
+              <div class="form-group" width=50%>
+                <button type="button" onclick="load_resource('{{instdown_api}}')"
+                    class="btn btn-success"style="width:100px;">Go</button>
+              </div>
+            </form>
+    -->
+          </div>
+        </nav>
+        <div style="padding: 100px 100px 10px;">
+            <div class="row">
+                <div class="col-lg-6 col-center-block">
+                    <div class="input-group">
+                        <input id='instagram_url' type="text" class="form-control"
+                            placeholder="Paste instagram page of photo/video url here!"
+                            >
+                        <span class="input-group-btn">
+                            <button class="btn btn-success" type="button"
+                                onclick="load_resource('{{instdown_api}}')">GO</button>
+                        </span>
+                    </div><!-- /input-group -->
+                </div><!-- /.col-lg-6 -->
+            </div><!-- /.row -->
         </div>
-<!--
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">Page 1</a></li>
-          <li><a href="#">Page 2</a></li>
-        </ul>
--->
-        <form class="navbar-form navbar-middle">
-          <div class="form-group" width=50%>
-            <input id='instgram_url' type="text"
-                placeholder="Paste instagram page of photo/video url here!"
-                class="form-control" style="width:500px;">
-          </div>
-          <div class="form-group" width=50%>
-            <button type="button" onclick="load_resource('{{instdown_api}}')"
-                class="btn btn-success"style="width:100px;">Go</button>
-          </div>
+        <form>
+            <div id='result'>
+                <div id='video'></div>
+                <div id='image'></div>
+            </div>
         </form>
-      </div>
-    </nav>
-    <form>
-        <div id='result'>
-            <div id='video'></div>
-            <div id='image'></div>
-        </div>
-    </form>
-    <p style="text-align:center;padding-bottom:1em;"><small><small><a
-                href="/">Home</a>
-            <small>Copyright © 2017-2020 Instdown. All rights
-                reserved.</small></small></small></p>
+        <p style="text-align:center;padding-bottom:1em;">
+            <small><small>
+                <a href="/">Home</a>
+                <small>Copyright © 2017-2020 Instdown. All rights reserved. </small>
+            </small></small>
+        </p>
     </body>
 </html>
