more keywords and artical

--- a/src/template/index.html
+++ b/src/template/index.html
@@ -1,7 +1,9 @@
 <html>
     <head>
     <title> Instdown is a downloader of instagram resource, such as instagram photo or instagram video.</title>
-    <meta name="keywords" content="instagram, photo, video, Downloader, download"/>
+    <meta name="keywords" content="instagram, photo, video, Downloader,
+    download, free, instagram downloader, online, instagram photo downloader,
+    instagram video downloader"/>
     <meta name="description" content="Instagram Photo Downloader. Instagram Video
     Downloader. Easy way to download instagram pictures and videos to your
     device."/>
@@ -48,22 +50,29 @@
                 <div class="col-lg-6 col-center-block">
                     <div class="input-group">
                         <input id='instagram_url' type="text" class="form-control"
-                            placeholder="Paste instagram page of photo/video url here!"
+                            placeholder="Paste URL of instagram photo/video 
+                            page here, and press GO button right here 👉 "
                             >
                         <span class="input-group-btn">
                             <button class="btn btn-success" type="button"
                                 onclick="load_resource('{{instdown_api}}')">GO</button>
                         </span>
                     </div><!-- /input-group -->
+                    <form>
+                        <div id='result'>
+                            <div id='video'></div>
+                            <div id='image'></div>
+                        </div>
+                    </form>
+                    <article>
+                        <h1>Instagram downloader</h1>
+                        <p>Instagram video/photo downloader online. Easy way to download instagram pictures and videos to your
+                            device.
+                        </p>
+                    </article>
                 </div><!-- /.col-lg-6 -->
             </div><!-- /.row -->
         </div>
-        <form>
-            <div id='result'>
-                <div id='video'></div>
-                <div id='image'></div>
-            </div>
-        </form>
         <p style="text-align:center;padding-bottom:1em;">
             <small><small>
                 <a href="/">Home</a>
